Basic functionality and layout

--- a/src/index.css
+++ b/src/index.css
@@ -3,15 +3,40 @@
   line-height: 1.5;
   font-weight: 400;
 
-  color-scheme: light dark;
+  /* color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-color: #242424; */
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+
+  --primary-color: #111;
+  --secondary-color: #eee;
+  --neutral-color: #fefefe;
+  --neutral-dark-color: #d0d0d0;
+  --button-background-color: var(--secondary-color);
+  --button-color: var(--primary-color);
+  font-size: 14px;
+  --font-size-text: 1rem;
+  --font-size-heading: 2.57rem;
+  --font-size-small: 0.85rem;
+  --font-size-code: 1.125rem;
+  --line-height: 1.6;
+  --font-weight: 400;
+  --border-width: 1px;
+  --border-style: solid;
+  --border-color: var(--neutral-dark-color);
+  --border-radius: 0.5rem;
+}
+
+#root {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  overflow: hidden;
 }
 
 a {
@@ -25,10 +50,9 @@ a:hover {
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
   min-height: 100vh;
+  background-color: var(--neutral-color);
+  font-size: var(--font-size-text);
 }
 
 h1 {
@@ -55,7 +79,7 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
-@media (prefers-color-scheme: light) {
+/* @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
     background-color: #ffffff;
@@ -65,5 +89,11 @@ button:focus-visible {
   }
   button {
     background-color: #f9f9f9;
+  }
+} */
+
+@media screen and (min-width: 640px) {
+  :root {
+    font-size: 16px;
   }
 }
