--- a/src/index.css
+++ b/src/index.css
@@ -3,9 +3,7 @@
   line-height: 1.5;
   font-weight: 400;
 
-  /* color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424; */
+  color-scheme: light dark;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -13,10 +11,13 @@
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
 
-  --primary-color: #111;
-  --secondary-color: #eee;
+  --primary-color: #e4f0f6;
+  --secondary-color: #ffd9b3;
+  --accent-color: #eee;
   --neutral-color: #fefefe;
-  --neutral-dark-color: #d0d0d0;
+  --success-color: #e6f4ea;
+  --error-color: #fce8e6;
+  --warning-color: #fff8e1;
   --button-background-color: var(--secondary-color);
   --button-color: var(--primary-color);
   font-size: 14px;
@@ -36,16 +37,6 @@
   display: flex;
   flex-direction: column;
   height: 100vh;
-  overflow: hidden;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
 }
 
 body {
@@ -60,37 +51,26 @@ h1 {
   line-height: 1.1;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
+a {
   font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
+  color: #646cff;
+  text-decoration: inherit;
 }
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+a:hover {
+  color: #535bf2;
 }
 
-/* @media (prefers-color-scheme: light) {
+@media (prefers-color-scheme: dark) {
   :root {
-    color: #213547;
-    background-color: #ffffff;
+    --primary-color: #002b5c;
+    --secondary-color: #e64a19;
+    --accent-color: #eee;
+    --neutral-color: #212121;
+    --success-color: #087f23;
+    --error-color: #b71c1c;
+    --warning-color: #ffa000;
   }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
-} */
+}
 
 @media screen and (min-width: 640px) {
   :root {
