--- a/src/index.css
+++ b/src/index.css
@@ -13,24 +13,31 @@
 
   --primary-color: #e4f0f6;
   --secondary-color: #ffd9b3;
-  --accent-color: #eee;
-  --neutral-color: #fefefe;
+  --accent-color: #7332f4;
+  --neutral-color: #f0f0f0;
+  --neutral-color-lighter: #f6f6f6;
+  --neutral-color-extra-light: #fcfcfc;
+  --neutral-color-darker: #dadada;
   --success-color: #e6f4ea;
   --error-color: #fce8e6;
   --warning-color: #fff8e1;
   --button-background-color: var(--secondary-color);
-  --button-color: var(--primary-color);
+  --button-color: var(--font-color);
   font-size: 14px;
   --font-size-text: 1rem;
   --font-size-heading: 2.57rem;
   --font-size-small: 0.85rem;
   --font-size-code: 1.125rem;
+  --font-color: #111;
   --line-height: 1.6;
   --font-weight: 400;
   --border-width: 1px;
   --border-style: solid;
-  --border-color: var(--neutral-dark-color);
+  --border-color: var(--neutral-color);
   --border-radius: 0.5rem;
+  --color-focus: var(--accent-color);
+  --select-border: var(--border-color);
+  --select-arrow: var(--font-color);
 }
 
 #root {
@@ -44,6 +51,7 @@ body {
   min-height: 100vh;
   background-color: var(--neutral-color);
   font-size: var(--font-size-text);
+  color: var(--font-color);
 }
 
 h1 {
@@ -66,9 +74,14 @@ a:hover {
     --secondary-color: #e64a19;
     --accent-color: #eee;
     --neutral-color: #212121;
+    --neutral-color-lighter: #2c2c2c;
+    --neutral-color-extra-light: #3c3c3c;
+    --neutral-color-darker: #1e1e1e;
     --success-color: #087f23;
     --error-color: #b71c1c;
     --warning-color: #ffa000;
+    --font-color: #fcfcfc;
+    --border-color: var(--neutral-color-extra-light);
   }
 }
 
