--- a/src/index.css
+++ b/src/index.css
@@ -63,6 +63,10 @@
   --link-color-hover: var(--primary-color-dark);
 }
 
+* {
+  box-sizing: border-box;
+}
+
 #root {
   display: flex;
   flex-direction: column;
